# esp32-projects-collection

./: README.md
buzzer-music/: Cargo.toml
dimmer-light/: Cargo.toml  README.md
embassy-async-mutex/: Cargo.toml  README.md
embassy-blocking-mutex/: Cargo.toml  README.md
embassy-channel/: Cargo.toml  README.md
embassy-leds-cicle/: Cargo.toml  README.md
embassy-pub-sub-channel/: Cargo.toml  README.md
embassy-sdcard/: Cargo.toml  i2s.md
embassy-signals/: Cargo.toml  README.md
embbassy-atomic-share/: Cargo.toml  README.md
fading-lights/: Cargo.toml  README.md
interrup-button/: Cargo.toml  README.md
light-sensor/: Cargo.toml  README.md
mp3-player/: Cargo.toml
music-player/: Cargo.toml
ntn-resistor-temp/: Cargo.toml  README.md
rate-blink/: Cargo.toml  README.md
real-time-timer/: Cargo.toml  README.md
sdcard/: Cargo.toml  explanations.md
semaphore/: Cargo.toml  README.md
simple-voltmeter/: Cargo.toml  README.md
soil-moisture/: Cargo.toml  README.md
timer-hardware/: Cargo.toml  README.md
wav-hex-player/: Cargo.toml  README.md
wav-hex-player/src/: audio_task.rs  lib.rs
wifi/: Cargo.toml
