[package]
edition      = "2021"
name         = "buzzer-music"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "buzzer-music"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c3"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32c3"] }
static_cell = "2.1.1"
esp-hal-buzzer = "0.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
